# RAS545-Aldrin-2025

./: CMakeLists.txt  README.md  package.xml
config/: scara_gazebo.yaml
launch/: scara_gazebo.launch.py  scara_rviz.launch.py
meshes/: base_link.stl  link_1.stl  link_3.stl  motor_3.stl
models/hw3_scara/: model.config
ras545_hw3/: CMakeLists.txt  model.config  package.xml
ras545_hw3/launch/: scara_gazebo.launch.py
ras545_hw3/meshes/: link_2.stl  motor_1.stl  motor_2.stl
ras545_hw3/scripts/: fk_scara.py  sqaure_traj.py
rviz/: scara_config.rviz
scripts/: ik_scara.py
scripts/gazebo/: fk_gazebo.py
urdf/: hw3_scara_gazebo.urdf  hw3_scara_rviz.urdf
