<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ras545_hw3</name>
  <version>0.0.1</version>
  <description>SCARA Robot Simulation with ROS 2 and Gazebo Ignition</description>
  
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  
  <!-- ROS 2 Control Dependencies -->
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>velocity_controllers</depend>

  <!-- Gazebo / Ignition Dependencies -->
  <depend>ign_ros2_control</depend>
  <depend>ros_ign_gazebo</depend>
  <depend>ros_gz_bridge</depend>

  <!-- ROS 2 Launch System -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ros2launch</depend>

  <!-- Additional dependencies -->
  <depend>std_msgs</depend>
  <depend>ackermann_steering_controller</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
